--- a/custom_components/xiaoshi_theme/manifest.json
+++ b/custom_components/xiaoshi_theme/manifest.json
@@ -7,5 +7,7 @@
   "requirements": ["astral>=2.2"],
   "config_flow": true,
   "version": "1.0.0",
-  "iot_class": "local_polling"
+  "iot_class": "local_polling",
+  "after_dependencies": ["mobile_app"], 
+  "startup_after": ["mobile_app"] 
 }
